--- a/ipynb/01-data_preprocessing.ipynb
+++ b/ipynb/01-data_preprocessing.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "3b906e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "935189e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +39,20 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "e265d2df",
    "metadata": {},
    "outputs": [],
    "source": [
+    "USE_PSEUDO_LABEL = False\n",
+    "\n",
     "config = configparser.ConfigParser()\n",
     "_ = config.read(os.path.join(\"..\", \"conf\", \"config.ini\"))\n",
     "\n",
-    "raw_data_path = config[\"project\"][\"raw_data_path\"]\n",
+    "raw_data_path = (\n",
+    "    config[\"project\"][\"pseudo_labeled_data_path\"]\n",
+    "    if USE_PSEUDO_LABEL\n",
+    "    else config[\"project\"][\"raw_data_path\"]\n",
+    ")\n",
     "validate_by_driver = eval(config[\"project\"][\"validate_by_driver\"])\n",
     "n_tfrec_chunks = eval(config[\"project\"][\"n_tfrec_chunks\"])\n",
     "\n",
@@ -64,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88953cd2",
    "metadata": {},
    "source": [
     "## *TFRecord* Files Creation"
@@ -72,6 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "9ff54b7a",
    "metadata": {},
    "outputs": [
     {
@@ -414,6 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "cc8f0b5a",
    "metadata": {},
    "outputs": [
     {
@@ -1576,9 +1588,9 @@
  "metadata": {
   "instance_type": "ml.g4dn.xlarge",
   "kernelspec": {
-   "display_name": "Python 3 (TensorFlow 2.6 Python 3.8 GPU Optimized)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:ap-northeast-2:806072073708:image/tensorflow-2.6-gpu-py38-cu112-ubuntu20.04-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1590,7 +1602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
