--- a/ipynb/02-model_training.ipynb
+++ b/ipynb/02-model_training.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "485e0a47",
    "metadata": {},
    "outputs": [],
@@ -22,8 +22,8 @@
     "import os\n",
     "import shutil\n",
     "import sys\n",
-    "import warnings\n",
     "import wandb\n",
+    "import warnings\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -46,6 +46,7 @@
     "    get_elapsed_time,\n",
     ")\n",
     "from utils.data_utils import (\n",
+    "    identity_func,\n",
     "    load_tfrecord_dataset,\n",
     "    mixup_dataset,\n",
     ")\n",
@@ -95,9 +96,7 @@
     "project_name = config[\"project\"][\"project_name\"]\n",
     "run_name = config[\"project\"][\"run_name\"]\n",
     "raw_data_path = config[\"project\"][\"raw_data_path\"]\n",
-    "pseudo_labeled_data_path = config[\"project\"][\"pseudo_labeled_data_path\"]\n",
-    "validate_by_driver = eval(config[\"project\"][\"validate_by_driver\"])\n",
-    "n_tfrec_chunks = eval(config[\"project\"][\"n_tfrec_chunks\"])\n",
+    "plabeled_data_path = config[\"project\"][\"plabeled_data_path\"]\n",
     "\n",
     "model_url = config[\"model\"][\"model_url\"]\n",
     "fc_size = eval(config[\"model\"][\"fc_size\"])\n",
@@ -145,8 +144,6 @@
     "    wandb.run.save()\n",
     "    \n",
     "wandb.config = {\n",
-    "    \"validate_by_driver\": validate_by_driver,\n",
-    "    \"n_tfrec_chunks\": n_tfrec_chunks,\n",
     "    \"model_url\": model_url,\n",
     "    \"fc_size\": fc_size,\n",
     "    \"img_size\": img_size,\n",
@@ -160,6 +157,7 @@
     "    \"label_smoothing\": label_smoothing,\n",
     "    \"n_train_splits\": n_train_splits,\n",
     "    \"n_test_splits\": n_test_splits,\n",
+    "    \"pseudo_label_thr\": pseudo_label_thr,\n",
     "}"
    ]
   },
@@ -182,7 +180,7 @@
     "test_raw_data_path = os.path.join(raw_data_path, \"imgs\", \"test\")\n",
     "\n",
     "n_train_examples = len(\n",
-    "    tf.io.gfile.glob(os.path.join(train_raw_data_path, os.path.join(\"*\", \"*.jpg\")))\n",
+    "    tf.io.gfile.glob(os.path.join(train_raw_data_path, \"*\", \"*.jpg\"))\n",
     ")\n",
     "test_ids = [\n",
     "    os.path.basename(img_path)\n",
@@ -450,37 +448,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ef78e61-6735-4c07-ad77-803ad261ce97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lowest_confident_ids = result.max(axis=1).sort_values()[:n_samples].index.tolist()\n",
-    "lowest_confident_result = result.loc[lowest_confident_ids].values\n",
-    "columns = [\"image_id\", \"image\", \"label\", \"proba\"]\n",
-    "\n",
-    "data = []\n",
-    "for each_id, label, proba in zip(\n",
-    "    lowest_confident_ids,\n",
-    "    lowest_confident_result.argmax(axis=1),\n",
-    "    lowest_confident_result.max(axis=1),\n",
-    "):\n",
-    "    data.append(\n",
-    "        [\n",
-    "            each_id,\n",
-    "            wandb.Image(os.path.join(test_raw_data_path, each_id)),\n",
-    "            label_names[f\"c{label}\"],\n",
-    "            round(proba, 6),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "lowest_confident_img_table = wandb.Table(data=data, columns=columns)\n",
-    "wandb.log({\"lowest_confident_img_table\": lowest_confident_img_table})\n",
-    "run.finish()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1965c0d9-adec-4e62-9163-995a65edbf7c",
    "metadata": {},
@@ -496,39 +463,33 @@
    "outputs": [],
    "source": [
     "train_raw_data_path = os.path.join(raw_data_path, \"imgs\", \"train\")\n",
-    "train_pseudo_labeled_data_path = os.path.join(\n",
-    "    pseudo_labeled_data_path, \"imgs\", \"train\"\n",
-    ")\n",
+    "train_plabeled_data_path = os.path.join(plabeled_data_path, \"imgs\", \"train\")\n",
     "test_raw_data_path = os.path.join(raw_data_path, \"imgs\", \"test\")\n",
-    "test_pseudo_labeled_data_path = os.path.join(\n",
-    "    pseudo_labeled_data_path, \"imgs\", \"test\"\n",
-    ")\n",
+    "test_plabeled_data_path = os.path.join(plabeled_data_path, \"imgs\", \"test\")\n",
     "\n",
-    "if os.path.exists(train_pseudo_labeled_data_path):\n",
-    "    shutil.rmtree(train_pseudo_labeled_data_path)\n",
+    "if os.path.exists(train_plabeled_data_path):\n",
+    "    shutil.rmtree(train_plabeled_data_path)\n",
     "\n",
-    "if os.path.exists(test_pseudo_labeled_data_path):\n",
-    "    shutil.rmtree(test_pseudo_labeled_data_path)\n",
+    "if os.path.exists(test_plabeled_data_path):\n",
+    "    shutil.rmtree(test_plabeled_data_path)\n",
     "\n",
-    "shutil.copytree(train_raw_data_path, train_pseudo_labeled_data_path)\n",
+    "shutil.copytree(train_raw_data_path, train_plabeled_data_path)\n",
     "\n",
-    "pseudo_labeled = result[result.max(axis=1) > pseudo_label_thr]\n",
+    "plabeled = result[result.max(axis=1) > pseudo_label_thr]\n",
     "\n",
-    "for file_name, label in zip(\n",
-    "    pseudo_labeled.index, pseudo_labeled.values.argmax(axis=1)\n",
-    "):\n",
+    "for file_name, label in zip(plabeled.index, plabeled.values.argmax(axis=1)):\n",
     "    shutil.copyfile(\n",
     "        os.path.join(test_raw_data_path, file_name),\n",
-    "        os.path.join(train_pseudo_labeled_data_path, f\"c{label}\", file_name),\n",
+    "        os.path.join(train_plabeled_data_path, f\"c{label}\", file_name),\n",
     "    )\n",
     "\n",
-    "os.makedirs(test_pseudo_labeled_data_path, exist_ok=True)\n",
-    "not_pseudo_labeled = result[~(result.max(axis=1) > pseudo_label_thr)]\n",
+    "os.makedirs(test_plabeled_data_path, exist_ok=True)\n",
+    "not_plabeled = result[~(result.max(axis=1) > pseudo_label_thr)]\n",
     "\n",
-    "for file_name in not_pseudo_labeled.index:\n",
+    "for file_name in not_plabeled.index:\n",
     "    shutil.copyfile(\n",
     "        os.path.join(test_raw_data_path, file_name),\n",
-    "        os.path.join(test_pseudo_labeled_data_path, file_name),\n",
+    "        os.path.join(test_plabeled_data_path, file_name),\n",
     "    )"
    ]
   }
