--- a/ipynb/01-data_preprocessing.ipynb
+++ b/ipynb/01-data_preprocessing.ipynb
@@ -43,15 +43,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "USE_PSEUDO_LABEL = True\n",
-    "\n",
     "config = configparser.ConfigParser()\n",
     "_ = config.read(os.path.join(\"..\", \"conf\", \"config.ini\"))\n",
     "\n",
+    "use_pseudo_label = False\n",
+    "\n",
+    "raw_data_path = config[\"project\"][\"raw_data_path\"]\n",
     "raw_data_path = (\n",
-    "    config[\"project\"][\"pseudo_labeled_data_path\"]\n",
-    "    if USE_PSEUDO_LABEL\n",
-    "    else config[\"project\"][\"raw_data_path\"]\n",
+    "    os.path.join(raw_data_path, \"pseudo_label\") if use_pseudo_label else raw_data_path\n",
     ")\n",
     "validate_by_driver = eval(config[\"project\"][\"validate_by_driver\"])\n",
     "n_tfrec_chunks = eval(config[\"project\"][\"n_tfrec_chunks\"])\n",
@@ -1566,7 +1565,7 @@
     "if os.path.exists(test_proc_data_path):\n",
     "    shutil.rmtree(test_proc_data_path)\n",
     "\n",
-    "multiplier = 4\n",
+    "multiplier = round(n_test_examples / n_train_examples)\n",
     "n_tfrec_chunks *= multiplier    \n",
     "for i in range(n_tfrec_chunks):\n",
     "    if i == 0:\n",
