--- a/ipynb/03-model_serving.ipynb
+++ b/ipynb/03-model_serving.ipynb
@@ -393,7 +393,7 @@
     "n_samples = 20\n",
     "sampled_img_paths = np.random.choice(test_img_paths, n_samples)\n",
     "last_conv_layer_name = \"top_conv\"\n",
-    "sampled_img_arrs, gradcam_img_arrs, labels = [], [], []\n",
+    "gradcam_img_arrs, labels = [], []\n",
     "\n",
     "for img_path in sampled_img_paths:\n",
     "    img_arr = get_img_arr(img_path, (img_size, img_size))\n",
@@ -403,9 +403,18 @@
     "        heatmap_arr,\n",
     "        cam_path=os.path.join(proc_data_path, img_path.split(os.path.sep)[-1]),\n",
     "    )\n",
-    "    sampled_img_arrs.append(img_arr)\n",
     "    gradcam_img_arrs.append(gradcam_img_arr / 255.0)\n",
     "    labels.append(label.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15fe8ede-00a4-4b96-883c-95c0efa3fe52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "view_img(gradcam_img_arrs, labels, n_samples, label_names)"
    ]
   },
   {
