--- a/ipynb/01-data_preprocessing.ipynb
+++ b/ipynb/01-data_preprocessing.ipynb
@@ -67,7 +67,7 @@
     "    \"c8\": \"hair and makeup\",\n",
     "    \"c9\": \"talking to passenger\",\n",
     "}\n",
-    "num_classes = len(label_names)"
+    "n_classes = len(label_names)"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "        dump_tfrecord(\n",
     "            train_examples_by_driver,\n",
     "            os.path.join(train_proc_data_path, f\"{key}.tfrec\"),\n",
-    "            num_classes=num_classes,\n",
+    "            n_classes=n_classes,\n",
     "        )\n",
     "\n",
     "else:\n",
@@ -162,7 +162,7 @@
     "        dump_tfrecord(\n",
     "            train_examples[start:end],\n",
     "            os.path.join(train_proc_data_path, f\"{str(i).zfill(2)}.tfrec\"),\n",
-    "            num_classes=num_classes, \n",
+    "            n_classes=n_classes, \n",
     "            is_prediction=False,\n",
     "        )"
    ]
