--- a/ipynb/02-model_training.ipynb
+++ b/ipynb/02-model_training.ipynb
@@ -129,7 +129,7 @@
     "}\n",
     "\n",
     "labels = list(label_names.keys())\n",
-    "num_classes = len(label_names)"
+    "n_classes = len(label_names)"
    ]
   },
   {
@@ -269,7 +269,7 @@
     "    (480, 640),\n",
     "    train_transforms,\n",
     "    n_samples,\n",
-    "    num_classes=num_classes,\n",
+    "    n_classes=n_classes,\n",
     ")\n",
     "\n",
     "view_img(sampled_dataset, n_samples, label_names)"
@@ -294,7 +294,7 @@
     "    model_url,\n",
     "    img_size,\n",
     "    fc_size,\n",
-    "    num_classes,\n",
+    "    n_classes,\n",
     "    initial_learning_rate,\n",
     "    first_decay_steps,\n",
     "    use_adamw,\n",
@@ -311,7 +311,7 @@
     "            tf.keras.layers.Dropout(0.5),\n",
     "            tf.keras.layers.Dense(fc_size, activation=\"relu\"),\n",
     "            tf.keras.layers.Dropout(0.5),\n",
-    "            tf.keras.layers.Dense(num_classes, activation=\"softmax\"),\n",
+    "            tf.keras.layers.Dense(n_classes, activation=\"softmax\"),\n",
     "        ]\n",
     "    )\n",
     "    if verbose:\n",
@@ -363,7 +363,7 @@
     "    test_transforms,\n",
     "    1,\n",
     "    shuffle=False,\n",
-    "    num_classes=num_classes,\n",
+    "    n_classes=n_classes,\n",
     "    is_prediction=True,\n",
     ")\n",
     "\n",
@@ -491,7 +491,7 @@
     "            img_size,\n",
     "            train_transforms,\n",
     "            batch_size,\n",
-    "            num_classes=num_classes,\n",
+    "            n_classes=n_classes,\n",
     "        )\n",
     "\n",
     "        if use_mixup:\n",
@@ -500,7 +500,7 @@
     "                img_size,\n",
     "                train_transforms,\n",
     "                batch_size,\n",
-    "                num_classes=num_classes,\n",
+    "                n_classes=n_classes,\n",
     "            )\n",
     "            zipped = tf.data.Dataset.zip((one_train_dataset, oth_train_dataset))\n",
     "            train_dataset = zipped.map(\n",
@@ -515,7 +515,7 @@
     "            img_size,\n",
     "            valid_transforms,\n",
     "            batch_size,\n",
-    "            num_classes=num_classes,\n",
+    "            n_classes=n_classes,\n",
     "        )\n",
     "\n",
     "        if n_train_splits > 1:\n",
@@ -539,7 +539,7 @@
     "            model_url,\n",
     "            img_size,\n",
     "            fc_size,\n",
-    "            num_classes,\n",
+    "            n_classes,\n",
     "            initial_learning_rate,\n",
     "            first_decay_steps,\n",
     "            use_adamw,\n",
